--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <!-- Custom Styles -->
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="login.css" />
-    <title>Impact</title>
+    <title>Impact Safe Version</title>
   </head>
   <body>
     <div id="root"></div>
